# craft_demo

./: .env  .env.example  README.md  pyproject.toml
lightrag/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_entity_chunks.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_relation_chunks.json  kv_store_text_chunks.json  source_chunks.json  standard_triples.json  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
notebooks/: ask_lightrag.ipynb
src/agentic_lightrag_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/agentic_rag/: __init__.py  app.py  config.py  main.py  schemas.py
src/agentic_rag/graph/: workflow.py
src/agentic_rag/services/: __init__.py  data_ingest.py  lightrag_service.py  llm.py  local_inference.py  pdf_cleaner.py  pdf_parser.py  triple_extractor.py
tests/: test_health.py
