[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-lightrag-demo"
version = "0.1.0"
description = "Agentic RAG demo built with LangGraph, PDF parsing, and LightRAG knowledge graph extraction."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "langgraph>=0.2.39",
    "lightrag-hku>=1.4.0",
    "openai>=1.51.0",
    "pypdf>=5.0.0",
    "python-multipart>=0.0.9",
    "transformers>=4.44.0",
    "sentence-transformers>=3.0.1",
    "accelerate>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "ruff>=0.6.9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
